Fix the spacing for dl’s that follow dl’s and move our social media microdata markup inline, the rest of it is inline

--- a/sites/agrea.ph/theme/css/input.css
+++ b/sites/agrea.ph/theme/css/input.css
@@ -70,8 +70,14 @@ dt:not([class]),
 strong:not([class]) {
   @apply font-semibold;
 }
+dl + dl {
+  @apply mt-4;
+}
 dt:not([class]) {
-  @apply leading-tight mt-2 mb-1;
+  @apply leading-tight mt-4 mb-1;
+}
+dl:not([class]) dt:not([class]):first-child {
+  @apply mt-2;
 }
 sub:not([class]),
 sup:not([class]) {
